# orbit

./: .gitignore  .prettierignore  GEMINI.md  LICENSE  README.md  components.d.ts  eslint.config.js  index.html  installer.iss  neutralino.config.json  package-lock.json  package.json  tsconfig.node.json  update-manifest.json  vite.config.ts
.claude/PRPs/reports/: elegant-dark-dashboard-ui-report.md
.claude/PRPs/reviews/: pr-1-review.md
.github/: release.yml
.github/workflows/: release-engine.yml  release-installer.yml  release-resources.yml  release.yml
core/: Cargo.toml
core/engine/: Cargo.toml
core/engine/src/: main.rs  updater.rs
core/engine/src/ipc/: bridge.rs  events.rs  handlers.rs
core/engine/src/kubernetes/: batch.rs  configmaps.rs  delete.rs  events.rs  logs.rs  manager.rs  metrics.rs  mod.rs  models.rs  namespaces.rs  nodes.rs  policies.rs  secrets.rs  services.rs  storage.rs  watchers.rs  workloads.rs
core/src/: main.rs
core/src/ipc/: bridge.rs  events.rs  handlers.rs  mod.rs  models.rs
core/src/kubernetes/: manager.rs  mod.rs  models.rs  namespaces.rs  nodes.rs  policies.rs  services.rs  workloads.rs
core/updater/: Cargo.toml
core/updater/src/: main.rs
scripts/: build-ext.js  build-installer.js  generate-manifest.js
src/: App.vue  main.ts  version.ts
src/assets/: base.css  main.css  primevue-overrides.css
src/components/: UpdaterNotifications.vue
src/components/config/: ConfigDataTable.vue  ConfigDetailsDrawer.vue  ConfigMetricsCards.vue  mockConfig.ts
src/components/dashboard/: AlertsEvents.vue  HealthOverview.vue  ResourceUsage.vue  StatusSummary.vue  TopConsumers.vue  WorkloadSummaries.vue
src/components/events/: EventDetailsDrawer.vue  EventMetricsCards.vue  EventsDataTable.vue  mockEvents.ts
src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue
src/components/logs/: LogHighlightRulesDialog.vue
src/components/namespaces/: NamespaceDetailsDrawer.vue  NamespaceMetricsCards.vue  NamespacesDataTable.vue  mockNamespaces.ts
src/components/nodes/: NodeMetricsCards.vue  NodesTable.vue  WorkloadsTable.vue  mockNodes.ts  mockWorkloads.ts
src/components/policies/: PoliciesDataTable.vue  PoliciesMetricsCards.vue  PolicyDetailsDrawer.vue  mockPolicies.ts
src/components/services/: ServiceDetailsDrawer.vue  ServiceMetricsCards.vue  ServicesDataTable.vue  mockServices.ts
src/components/settings/: GeneralSettingsForm.vue  SettingsAboutTab.vue  SettingsGeneralTab.vue  SettingsInfoCards.vue
src/composables/: useCluster.ts  useLogHighlighting.ts  useLogSelection.ts  useLogStream.ts  useResourceFilters.ts  useTableColumns.ts  useTheme.ts  useWorkloadActions.ts
src/router/: index.ts
src/services/: kubernetesService.ts  nativeService.ts  updaterService.ts
src/stores/: kubernetesStore.ts  updater.ts
src/theme/: orbitTheme.ts
src/types/: events.ts  kubernetes.ts
src/views/: AboutView.vue  ConfigView.vue  DashboardView.vue  EventsView.vue  LogsView.vue  NamespacesView.vue  NodesView.vue  OfflineClusterView.vue  PodsView.vue  PoliciesView.vue  ServicesView.vue  SettingsView.vue  StorageView.vue  WelcomeView.vue  WorkloadsView.vue
test/: test-workloads.yaml
(+24 files in other folders)
