[package]
name = "orbit-updater"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.1.3"
log = "0.4"
simplelog = "0.12.2"

[profile.release]
opt-level = "z"        # optimize for size
lto = true             # link time optimization
codegen-units = 1      # smaller binary
strip = true           # strip symbols
panic = "abort"        # smaller binary
