[package]
name = "orbit-apply"
version = "1.0.8"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.1.3"
log = "0.4"
simplelog = "0.12.2"
clap = { version = "4.6.1", features = ["derive"] }

[profile.release]
opt-level = "z"        # optimize for size
lto = true             # link time optimization
codegen-units = 1      # smaller binary
strip = true           # strip symbols
panic = "abort"        # smaller binary
